<resources>
    <string name="app_name">SignUp Page</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="gender">Gender</string>
    <string name="language">Language</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="skills">Skills</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="signup_form">SignUp Form</string>
    <string name="enter_name">Enter Name:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="python">Python</string>
    <string name="javascript">JavaScript</string>
    <string name="cpp">C++</string>
    <string name="beginner">Beginner</string>
    <string name="advance">Advance</string>

</resources>